--- a/skyscanner_flight_search/index.html
+++ b/skyscanner_flight_search/index.html
@@ -11,7 +11,7 @@
 				<h1>Decostruction Skyscanner Flight Search</h1>
 				<h2>Flight Search type: Return (Round trip)</h2>
 				<img src="img/Skyscanner.gif" alt="Skyscanner Flight Search">
-				<p>
+				<div class="content">
 					<h3>From </h3>
 					<ul>
 						<li>
@@ -289,9 +289,11 @@
 						</li>
 					</ul>
 					* All values have a preselected option that allows to trigger a search even in case that the user didn't select any value.`
-				</p>
-				<p><a href="single/index.html">Single Flight Search</a></p>
-				<p><a href="multy-city/index.html">Multy-City Flight Search</a></p>
+				</div>
+				<div class="footer">
+					<a class="footer-link" href="single/index.html">Single Flight Search</a>
+					<a class="footer-link" href="multy-city/index.html">Multy-City Flight Search</a>
+				</div>
 			</div>
 		</body>
-</html>
+</html> 
