--- a/skyscanner_flight_search/index.html
+++ b/skyscanner_flight_search/index.html
@@ -12,6 +12,7 @@
 				<h2>Flight Search type: Return (Round trip)</h2>
 				<img src="img/Skyscanner.gif" alt="Skyscanner Flight Search">
 				<div class="content">
+					<h2>Analisis</h2>
 					<h3>From </h3>
 					<ul>
 						<li>
@@ -289,6 +290,8 @@
 						</li>
 					</ul>
 					* All values have a preselected option that allows to trigger a search even in case that the user didn't select any value.`
+					<h2>Reinterpretation</h2>
+					<img src="img/oblivion-flights.png" alt="Skyscanner Flight Search">
 				</div>
 				<div class="footer">
 					<a class="footer-link" href="single/index.html">Single Flight Search</a>
